--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "music_me",
+  "name": "music_player",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,12 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.15",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/jest": "^29.5.6",
+    "@types/node": "^20.8.9",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-audio-player": "^0.17.0",
+    "react-bootstrap": "^2.9.1",
+    "react-dom": "^18.2.0",
+    "react-player": "^2.13.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.17.0",
+    "react-timer-hook": "^3.0.7",
+    "redux": "^4.2.1",
+    "sass": "^1.69.5",
+    "web-vitals": "^3.5.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
